--- a/templates/default/local.xml.erb
+++ b/templates/default/local.xml.erb
@@ -19,7 +19,7 @@
       </db>
       <default_setup>
         <connection>
-          <host><![CDATA[<%= @db_conf[:host] %>]]></host>
+          <host><![CDATA[<%= @db_conf[:host] %>:<%= @db_conf[:port] %>]]></host>
           <username><![CDATA[<%= @db_user[:username] %>]]></username>
           <password><![CDATA[<%= @db_user[:password] %>]]></password>
           <dbname><![CDATA[<%= @db_user[:database] %>]]></dbname>
