--- a/templates/default/local.xml.erb
+++ b/templates/default/local.xml.erb
@@ -19,7 +19,7 @@
       </db>
       <default_setup>
         <connection>
-          <host><![CDATA[<%= @db_conf[:host] %>:<%= @db_conf[:port] %>]]></host>
+          <host><![CDATA[<%= @db_config[:host] %>:<%= @db_config[:port] %>]]></host>
           <username><![CDATA[<%= @db_user[:username] %>]]></username>
           <password><![CDATA[<%= @db_user[:password] %>]]></password>
           <dbname><![CDATA[<%= @db_user[:database] %>]]></dbname>
@@ -27,9 +27,9 @@
         </connection>
       </default_setup>
     </resources>
-    <session_save><![CDATA[<%= @session['save'] %>]]></session_save>
-    <% if @session['save_path'] %>
-      <session_save_path><![CDATA[<%= @session['save_path'] %>]]></session_save_path>
+    <session_save><![CDATA[<%= @session[:save] %>]]></session_save>
+    <% if @session[:save_path] %>
+      <session_save_path><![CDATA[<%= @session[:save_path] %>]]></session_save_path>
     <% end %>
   </global>
   <admin>
