--- a/templates/default/http.erb
+++ b/templates/default/http.erb
@@ -1,2 +1,2 @@
 # Port <%= node[:magento][:firewall][:http] %> for http
--A FWR -p tcp -m tcp --dport <%= node[:magento][:firewall][:http] %> -j ACCEPT
+-A INPUT -p tcp -m tcp --dport <%= node[:magento][:firewall][:http] %> -j ACCEPT
