--- a/templates/default/local.xml.erb
+++ b/templates/default/local.xml.erb
@@ -36,6 +36,29 @@
     <% if @session[:save_path] %>
     <session_save_path><![CDATA[<%= @session[:save_path] %>]]></session_save_path>
     <% end %>
+    <cache>
+      <backend>memcached</backend>
+      <slow_backend>database</slow_backend>
+      <slow_backend_store_data><![CDATA[]]></slow_backend_store_data>
+      <auto_refresh_fast_cache><![CDATA[]]></auto_refresh_fast_cache>
+      <memcached>
+        <servers>
+          <server>
+            <host><![CDATA[<%= @cache_info['servers'] %>]]></host>
+            <port><![CDATA[<%= @cache_info['server_port'] %>]]></port>
+            <persistent><![CDATA[<%= @cache_info['persistent'] %>]]></persistent>
+            <weight><![CDATA[<%= @cache_info['weight'] %>]]></weight>
+            <timeout><![CDATA[<%= @cache_info['timeout'] %>]]></timeout>
+            <retry_interval><![CDATA[<%= @cache_info['retry_interval'] %>]]></retry_interval>
+          </server>
+        </servers>
+        <compression><![CDATA[<%= @cache_info['compression'] %>]]></compression>
+        <cache_dir><![CDATA[]]></cache_dir>
+        <hashed_directory_level><![CDATA[]]></hashed_directory_level>
+        <hashed_directory_umask><![CDATA[]]></hashed_directory_umask>
+        <file_name_prefix><![CDATA[<%= @db_prefix %>]]></file_name_prefix>
+      </memcached>
+    </cache>
   </global>
   <admin>
     <routers>
