Adding apt/yum to mysql recipe incase it is run seperately

--- a/templates/default/nginx-site.erb
+++ b/templates/default/nginx-site.erb
@@ -21,7 +21,7 @@ server {
   autoindex off;
 
   # protection (we have no .htaccess)
-  location ~ (^/(app/|includes/|lib/|/pkginfo/|var/|report/config.xml)|/\.git/|/\.hg/|/\.svn/|\.installed|/.hta.+) {
+  location ~ (^/(app/|includes/|lib/|/pkginfo/|var/|report/config.xml)|/\.git/|/\.hg/|/\.svn/|\.installed|\.ssh|/.hta.+) {
     deny all;
   }
 
