Disable slow_backend

--- a/templates/default/local.xml.erb
+++ b/templates/default/local.xml.erb
@@ -39,8 +39,8 @@
     <cache>
       <backend>memcached</backend>
       <slow_backend>database</slow_backend>
-      <slow_backend_store_data><![CDATA[]]></slow_backend_store_data>
-      <auto_refresh_fast_cache><![CDATA[]]></auto_refresh_fast_cache>
+      <slow_backend_store_data><![CDATA[0]]></slow_backend_store_data>
+      <auto_refresh_fast_cache><![CDATA[0]]></auto_refresh_fast_cache>
       <memcached>
         <servers>
           <server>
