--- a/templates/default/varnish.erb
+++ b/templates/default/varnish.erb
@@ -15,7 +15,7 @@ MEMLOCK=82000
 
 # Default varnish instance name is the local nodename.  Can be overridden with
 # the -n switch, to have more instances on a single server.
-INSTANCE=cookbook-magento-berkshelf
+INSTANCE=<%= node[:hostname] %>
 
 
 
